Adding ability to download images from site

--- a/spec/fixtures/basic_page.html
+++ b/spec/fixtures/basic_page.html
@@ -10,7 +10,7 @@
   
   <img style="width: 600px; height: 1083px;" src="/sites/default/files/user_uploads/images/Essentials01(1).jpg" alt="Essentials">
   
-  <IMG style="width: 600px; height: 133px; border-width: 0px; border-style: solid;" src="/sites/default/files/user_uploads/images/RatRace.png" alt="Workin For Our Money!">
+  <IMG style="width: 600px; height: 133px; border-width: 0px; border-style: solid;" src="/sites/default/files/user_uploads/images/RatRace.tiff" alt="Workin For Our Money!">
   
   <a href="http://www.boobs.com">Free boobs!</a>
   <a href="/clickhere.html">Click me!!!</a>
